Mark artifacts as GTNH builds

--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,7 @@
 minecraft_version=1.7.10
 forge_version=10.13.4.1614-1.7.10
 core_build_version=1.19
-core_build_type=r
+core_build_type=GTNH
 
 group=myessentials
 archivesBaseName=MyEssentials-Core
