--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,28 @@
-#eclipse
-.project
+.gradle
+.settings
+/.idea/
+/run/
+/build/
+/eclipse/
 .classpath
-.metadata
-org.*
-bin
-
-#idea
+.project
+/bin/
+/config/
+/crash-reports/
+/logs/
+options.txt
+/saves/
+usernamecache.json
+banned-ips.json
+banned-players.json
+eula.txt
+ops.json
+server.properties
+servers.dat
+usercache.json
+whitelist.json
+/out/
 *.iml
 *.ipr
 *.iws
-.idea
-out
-
-#gradle
-build
-.gradle
-
-#runtime
-run
-
-#mac
-.DS_Store
-
-#zsh
-.gradletasknamecache
+src/main/resources/mixins.*.json
