--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,6 +2,21 @@
 
 repositories {
     maven {
-        url "https://cursemaven.com"
+        name 'GTNH Maven'
+        url 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
+        allowInsecureProtocol
+    }
+    maven {
+        url 'https://cursemaven.com'
+        content {
+            includeGroup 'curse.maven'
+        }
+    }
+    maven {
+        url 'https://maven.elmakers.com/repository/'
+    }
+    maven {
+        name 'SpongePowered'
+        url 'https://repo.spongepowered.org/maven'
     }
 }
