Update dev username (#11)

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -4,7 +4,7 @@ dependencies {
     compile('org.xerial:sqlite-jdbc:3.8.9.1')
     compile('mysql:mysql-connector-java:8.0.33')
 
-    compileOnly('com.forgeessentials:forgeessentials:1.4.6-SNAPSHOT:dev') {transitive = false}
+    compileOnly(rfg.deobf('maven.modrinth:forge-essentials:7.5.1')) {transitive = false}
 
     compileOnly('org.bukkit:bukkit:1.7.9-R0.2')
 }
