--- a/repositories.gradle
+++ b/repositories.gradle
@@ -2,21 +2,21 @@
 
 repositories {
     maven {
-        name 'GTNH Maven'
-        url 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
-        allowInsecureProtocol
+        name = 'GTNH Maven'
+        url = 'http://jenkins.usrv.eu:8081/nexus/content/groups/public/'
+        allowInsecureProtocol = true
     }
     maven {
-        url 'https://cursemaven.com'
+        url = 'https://cursemaven.com'
         content {
             includeGroup 'curse.maven'
         }
     }
     maven {
-        url 'https://maven.elmakers.com/repository/'
+        url = 'https://maven.elmakers.com/repository/'
     }
     maven {
-        name 'SpongePowered'
-        url 'https://repo.spongepowered.org/maven'
+        name = 'SpongePowered'
+        url = 'https://repo.spongepowered.org/maven'
     }
 }
